--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ sites/*/settings*.php
 # Ignore paths that contain user-generated content.
 sites/*/files
 sites/*/private
+
+# Custom ignore paths for the Critical Thinking site
+sites/all/modules/*
+sites/all/themes/zen/*
